# btmid

./: .gitignore  .gitmodules  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  FIX_CRASH.md  PLAN.md  PLAN_ARCHITECTURE.md  PLAN_STATE_CALLBACK.md  TODO.md  TODO2.md  TODO_ARCHITECTURE.md  TODO_LOOP.md  TODO_LOOP2.md  TODO_MONO_1.md  TODO_MONO_2.md  TODO_MONO_SEQ.md  TODO_OSC.md  TODO_OSC2.md  TODO_OSC3.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/egon12/btmid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/soundfonts/: README.md
app/src/main/cpp/: AudioConfig.h  AudioEngine.h  AudioGraph.cpp  AudioGraph.h  AudioRenderer.h  CMakeLists.txt  ChannelEngine.cpp  ChannelEngine.h  Instrument.h  InstrumentRepository.cpp  InstrumentRepository.h  LoopRecorder.cpp  LoopRecorder.h  Metronome.cpp  Metronome.h  MidiEngine.cpp  MidiEngine.h  MidiEvt.h  MidiParser.cpp  MidiParser.h  NativeEngine.cpp  NativeEngine.h  OboeEngine.cpp  OboeEngine.h  PianoBenchmark.cpp  PianoBenchmark.h  SineTestRenderer.cpp  SineTestRenderer.h  SpscRing.h  UICallback.cpp  UICallback.h  WifiEngine.cpp  WifiEngine.h  jni_bridge.cpp
app/src/main/cpp/instruments/: FmDrum.cpp  FmDrum.h  MonoOscillator.cpp  MonoOscillator.h  NoiseDrum.cpp  NoiseDrum.h  Piano.cpp  Piano.h  PianoSinTable.cpp  PianoSinTable.h  PolyOscillator.cpp  PolyOscillator.h  SampleDrum.cpp  SampleDrum.h  SfInstrument.cpp  SfInstrument.h  WaveTable.cpp  WaveTable.h
app/src/main/cpp/outputs/: OboeEngine.cpp  OboeEngine.h  OboeOutput.cpp  OboeOutput.h  WifiEngine.cpp  WifiEngine.h  WifiOutput.cpp  WifiOutput.h
app/src/main/cpp/renderers/: FmDrumRenderer.cpp  FmDrumRenderer.h  NoiseDrumRenderer.cpp  NoiseDrumRenderer.h  PianoRenderer.cpp  PianoRenderer.h  PianoSinTableRenderer.cpp  PianoSinTableRenderer.h  SampleDrumRenderer.cpp  SampleDrumRenderer.h
app/src/main/java/org/egon12/btmid/: DrumBackendStore.kt  KeyboardSoundStore.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/org/egon12/btmid/bluetooth/: BleMidiConnection.kt  BleScanner.kt
app/src/main/java/org/egon12/btmid/midi/: AppMidiReceiver.kt  MidiEvent.kt  MidiParser.kt  MidiRouter.kt
app/src/main/java/org/egon12/btmid/synth/: AudioEngine.kt  Voice.kt  (+7 more)
app/src/main/java/org/gilbertxenodike/btmid/: DrumBackendStore.kt  KeyboardSoundStore.kt  KeyboardTypeStore.kt  MainActivity.kt  MainViewModel.kt  WaveformStore.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/egon12/btmid/: ExampleUnitTest.kt
app/src/test/java/org/gilbertxenodike/btmid/: ExampleUnitTest.kt
cpp_host_tests/: CMakeLists.txt  Makefile  fft  fft.rs  renderer_test.cpp  result.txt  wav_reader  wav_reader.rs  wav_writer.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
